--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.80.3",
     "slugify": "^1.6.6",
     "xss": "^1.0.15"
   },
